--- a/apps/card/project.json
+++ b/apps/card/project.json
@@ -35,7 +35,7 @@
           }
         ],
         "styles": [
-          "apps/card/src/styles.scss"
+          "apps/card/src/styles/styles.scss"
         ],
         "scripts": []
       },
