chore: Update feature Form with validators

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "eslint.validate": ["json"]
+  "eslint.validate": [
+    "json"
+  ],
+  "cSpell.words": [
+    "Applessed",
+    "maxlength"
+  ]
 }
