--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,8 @@
       "@card/shared-ui-core": ["libs/shared/ui/core/index.ts"],
       "@card/shared-ui-core/*": ["libs/shared/ui/core/*"],
       "@card/shared-util-environment": ["libs/shared/util/environment/src/index.ts"],
-      "@card/shared-util-faker": ["libs/shared/util/faker/src/index.ts"]
+      "@card/shared-util-faker": ["libs/shared/util/faker/src/index.ts"],
+      "@card/shared-util-validators": ["libs/shared/util/validators/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
