--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@card/card-feature-confirm": ["libs/card/feature-confirm/src/index.ts"],
       "@card/card-feature-form": ["libs/card/feature-form/src/index.ts"],
       "@card/card-feature-shell": ["libs/card/feature-shell/src/index.ts"],
       "@card/shared-data-access-api": ["libs/shared/data-access/api/src/index.ts"],
